<resources>
    <string name="app_name">LetMeSee</string>
    <string name="item">Item</string>
    <string name="item1">Item</string>
    <string name="LetMeSee">LetMeSee</string>
    <string name="please_enter_what_you_want">Please Enter what you want</string>
    <string name="please_enter">Please Enter</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_search_here">Please Search Here!</string>
    <string name="author">author</string>
    <string name="description">description</string>
    <string name="dateDetail">DateDetail</string>
    <string name="see_article">see Article</string>
    <string name="title">title</string>
    <string name="more">More....</string>
    <string name="about">About</string>
    <string name="Search">Search</string>
    <string name="by_sarah_fereidounian_n_phone_number_98_09377898670">By Sarah Fereidounian\n \n Phone Number:+98 09377898670</string>
</resources>