<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presenter.ListFragment"
    android:background="#EFEBE9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/oxford"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/author"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:layout_below="@id/title"
            android:fontFamily="@font/tinybold" />



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_content_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/detail_author"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"/>


        <TextView
            android:id="@+id/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dateDetail"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            android:backgroundTint="@color/white"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/fragment_content_image"
            >

            <TextView
                android:id="@+id/detail_fragment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_content_image"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/oxford"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                />
       </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/fragment_detail_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/detail_date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/more"
            android:textColor="#1A1A1B"
            android:backgroundTint="#FF5722"
            android:textSize="15sp"
            android:fontFamily="@font/berry"/>

    </RelativeLayout>

</ScrollView>