<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.ListFragment"
    android:background="#EFEBE9">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFAB91"
          >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text = "@string/LetMeSee"
                    android:textStyle="bold"
                    android:textColor="#C96F53"
                    android:textSize="32sp"
                    android:fontFamily="@font/chomsky"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/card_view"
            android:layout_below="@id/searchView"
            />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FF8A50"
        android:fontFamily="@font/pp"
        android:hint="@string/Search"
        android:iconifiedByDefault="false"
        android:queryHint="Search Here"
        android:textColor="#191919"
        android:textColorHint="#FF8A50"
        android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_search_24"
            android:layout_alignEnd="@id/searchView"
            android:layout_below="@id/toolbar"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="italic"
            android:backgroundTint="#FF8A50"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:fontFamily="@font/pp"
            />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progressTint="#FF5722"
        android:indeterminate="true"
        android:visibility="invisible"/>


</RelativeLayout>

